# texas-contractor-instrument

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  weekly-scan.yml
config/: license_types.yml  scoring.yml  territory.yml
data/: historical_licenses.json  previous_snapshot.json  run_log.json
src/: __init__.py  differ.py  main.py  notifications.py  scorer.py  scraper.py  sheets_output.py  tsbpe_scraper.py
tests/: test_differ.py  test_notifications.py  test_scorer.py
tests/fixtures/: sample_tdlr_response.json
