[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdlr-license-monitor"
version = "1.0.0"
description = "Automated detection and scoring of newly licensed contractors in Central Texas via TDLR and TSBPE government datasets."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "TDLR License Monitor Contributors" },
]
keywords = [
    "tdlr",
    "texas",
    "contractor",
    "license",
    "monitor",
    "scraper",
    "socrata",
    "automation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "google-api-python-client>=2.130.0",
    "google-auth>=2.29.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/jacquesdjean/texas-contractor-instrument"
Documentation = "https://github.com/jacquesdjean/texas-contractor-instrument#readme"
Repository = "https://github.com/jacquesdjean/texas-contractor-instrument"
Issues = "https://github.com/jacquesdjean/texas-contractor-instrument/issues"
Changelog = "https://github.com/jacquesdjean/texas-contractor-instrument/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
